@@ -125,6 +125,7 @@ namespace std
 	      int_type __c = __sb->sgetc();
 
 	      // See comment in istream.tcc.
+	      bool __large_ignore = false;
 	      while (true)
 		{
 		  while (_M_gcount < __n
@@ -147,10 +148,16 @@ namespace std
 		    }
 		  if (__n == numeric_limits<streamsize>::max()
 		      && !traits_type::eq_int_type(__c, __eof))
-		    _M_gcount = numeric_limits<streamsize>::min();
+		    {
+		      _M_gcount = numeric_limits<streamsize>::min();
+		      __large_ignore = true;
+		    }
 		  else
 		    break;
 		}
+
+	      if (__large_ignore)
+		_M_gcount = numeric_limits<streamsize>::max();
 
 	      if (traits_type::eq_int_type(__c, __eof))
 		__err |= ios_base::eofbit;
@@ -183,6 +190,7 @@ namespace std
 	      __streambuf_type* __sb = this->rdbuf();
 	      int_type __c = __sb->sgetc();
 
+	      bool __large_ignore = false;
 	      while (true)
 		{
 		  while (_M_gcount < __n
@@ -212,16 +220,23 @@ namespace std
 		  if (__n == numeric_limits<streamsize>::max()
 		      && !traits_type::eq_int_type(__c, __eof)
 		      && !traits_type::eq_int_type(__c, __delim))
-		    _M_gcount = numeric_limits<streamsize>::min();
+		    {
+		      _M_gcount = numeric_limits<streamsize>::min();
+		      __large_ignore = true;
+		    }
 		  else
 		    break;
 		}
+
+	      if (__large_ignore)
+		_M_gcount = numeric_limits<streamsize>::max();
 
 	      if (traits_type::eq_int_type(__c, __eof))
 		__err |= ios_base::eofbit;
 	      else if (traits_type::eq_int_type(__c, __delim))
 		{
-		  ++_M_gcount;
+		  if (_M_gcount < numeric_limits<streamsize>::max())
+		    ++_M_gcount;
 		  __sb->sbumpc();
 		}
 	    }
@@ -403,6 +418,7 @@ namespace std
 	      __streambuf_type* __sb = this->rdbuf();
 	      int_type __c = __sb->sgetc();
 
+	      bool __large_ignore = false;
 	      while (true)
 		{
 		  while (_M_gcount < __n
@@ -425,10 +441,16 @@ namespace std
 		    }
 		  if (__n == numeric_limits<streamsize>::max()
 		      && !traits_type::eq_int_type(__c, __eof))
-		    _M_gcount = numeric_limits<streamsize>::min();
+		    {
+		      _M_gcount = numeric_limits<streamsize>::min();
+		      __large_ignore = true;
+		    }
 		  else
 		    break;
 		}
+
+	      if (__large_ignore)
+		_M_gcount = numeric_limits<streamsize>::max();
 
 	      if (traits_type::eq_int_type(__c, __eof))
 		__err |= ios_base::eofbit;
@@ -461,6 +483,7 @@ namespace std
 	      __streambuf_type* __sb = this->rdbuf();
 	      int_type __c = __sb->sgetc();
 
+	      bool __large_ignore = false;
 	      while (true)
 		{
 		  while (_M_gcount < __n
@@ -490,16 +513,23 @@ namespace std
 		  if (__n == numeric_limits<streamsize>::max()
 		      && !traits_type::eq_int_type(__c, __eof)
 		      && !traits_type::eq_int_type(__c, __delim))
-		    _M_gcount = numeric_limits<streamsize>::min();
+		    {
+		      _M_gcount = numeric_limits<streamsize>::min();
+		      __large_ignore = true;
+		    }
 		  else
 		    break;
 		}
+
+	      if (__large_ignore)
+		_M_gcount = numeric_limits<streamsize>::max();
 
 	      if (traits_type::eq_int_type(__c, __eof))
 		__err |= ios_base::eofbit;
 	      else if (traits_type::eq_int_type(__c, __delim))
 		{
-		  ++_M_gcount;
+		  if (_M_gcount < numeric_limits<streamsize>::max())
+		    ++_M_gcount;
 		  __sb->sbumpc();
 		}
 	    }
